# retentioneering-tmp

./: METADATA  RECORD  pyproject.toml
retentioneering/data_processors_lib/: group_events_bulk.py  rename.py
retentioneering/datasets/data/: ab_test_demo.csv
retentioneering/params_model/: params_model.py
retentioneering/preprocessing_graph/: interface.py  preprocessing_graph.py
retentioneering/utils/: config.py
