[tool.poetry]
name = "retentioneering"
version = "4.0.0-rc4+pydantic2"
description = ""
authors = ["Motin <motin@motin.eu>"]
readme = "README.md"
packages = [
    {include = "retentioneering"},
]

[tool.poetry.dependencies]
python = ">=3.9,<3.13"
docrep = ">=0.3.2,<0.4.0"
ipykernel = ">6.0.0,<7.0.0"
ipython = "==7.34.0"
ipywidgets = ">=8.0.4,!=8.0.5"
jupyterlab = ">=3.4.7"
matplotlib = ">=3.7.2"
nanoid = ">=2.0.0,<3.0.0"
networkx = "==2.8.6"
notebook = ">=6.5.6"
numpy = "<3.0.0,!=1.24"
pandas = ">=2.2.0"
plotly = ">=5.10.0"
pydantic = ">=1.10.2,<2"
pyzmq = "==26.1.0"
scikit-learn = ">=1.4.0,<1.5.0"
seaborn = ">=0.12.1"
statsmodels = ">=0.14.0"
tornado = "==6.3.2"
umap-learn = ">=0.5.3"
virtualenv = ">=20.17"
scipy = [
    { version = "==1.10.1", python = "<3.9" },
    { version = ">=1.11.2", python = ">=3.9" }
]

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
